Fixed Text Align in About Component and form now takes more advantage of space in Contact Component

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -6,3 +6,5 @@
 	justify-content: flex-start;
 	flex-direction: column;
 }
+
+p { text-align: center; }
