--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -45,6 +45,6 @@
 }
 @media only screen and (max-width: 485px) {
 	.form-container {
-		width: 250px;
+		width: 340px;
 	}
 }
